# terno-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
backend/: .env.example  .gitignore  database.py  main.py  models.py  pyproject.toml  store.py
benchmarks/: README.md  __init__.py
sdk/: .env.example  README.md  pyproject.toml
sdk/src/terno/: __init__.py
sdk/src/terno_agent/: __init__.py  __main__.py  cli.py  config.py  sdk.py
sdk/src/terno_agent/agents/: base.py  terno.py
sdk/src/terno_agent/attachments/: manager.py  store.py
sdk/src/terno_agent/core/: __init__.py  cancel.py  compaction.py  events.py  exceptions.py  hooks.py  messages.py  permissions.py  tool.py
sdk/src/terno_agent/db/: __init__.py
sdk/src/terno_agent/knowledge/: base.py  cli.py  context.py  prompts.py  runner.py  store.py
sdk/src/terno_agent/knowledge/phases/: annotation.py
sdk/src/terno_agent/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_client.py  terno_llm.py
sdk/src/terno_agent/mcp/: __init__.py  bridge.py  config.py  manager.py  session.py  tool.py
sdk/src/terno_agent/memory/: __init__.py  extractor.py  paths.py  retriever.py  store.py  types.py
sdk/src/terno_agent/prompts/: __init__.py  prompt.py
sdk/src/terno_agent/rag/: __init__.py  embeddings.py  milvus_store.py  retriever.py  vector_store.py
sdk/src/terno_agent/sandbox/: __init__.py  _driver.py  base.py  docker.py  factory.py  local.py
sdk/src/terno_agent/skills/: tool.py
sdk/src/terno_agent/skills/builtin/code-review/: SKILL.md
sdk/src/terno_agent/skills/builtin/data-analysis/: SKILL.md
sdk/src/terno_agent/skills/builtin/data-cleaning/: SKILL.md
sdk/src/terno_agent/skills/builtin/data-visualization/: SKILL.md
sdk/src/terno_agent/skills/builtin/debugging/: SKILL.md
sdk/src/terno_agent/skills/builtin/documentation/: SKILL.md
sdk/src/terno_agent/tools/: __init__.py  ask_user.py  code_exec.py  files.py  memory.py  monitor.py  search.py  shell.py  subagent.py  tasks.py  web.py
sdk/src/terno_agent/wiki/: __init__.py  agent.py  builder.py  bundle.py  concept.py  context.py  frontmatter.py  paths.py  prompts.py  tools.py
sdk/tests/: test_agent_events.py  test_attachments.py  test_cancel.py  test_chat_gated.py  test_config_dotenv.py  test_edit_diff_render.py  test_file_tools.py  test_imports.py  test_local_sandbox.py  test_permission_hook.py  test_sdk_agent.py  test_search_tools.py  test_shell_tool.py  test_skills.py  test_task_tools.py  test_terno_agent_tools.py  test_web_tools.py
sdk/tests/mcp/: conftest.py  test_bridge.py  test_integration_terno.py  test_manager.py  test_runner.py  test_tool_adapter.py
sdk/tests/memory/: conftest.py  test_paths.py  test_retriever.py  test_store.py  test_tools.py  test_vector_store.py
sdk/tests/sandbox/: test_docker_discovery.py  test_docker_session.py  test_driver.py  test_fallback.py
sdk/tests/tools/: test_memory.py
sdk/tests/wiki/: conftest.py  test_agent_integration.py  test_builder.py  test_bundle.py  test_concept.py  test_context.py  test_knowledge_agent.py  test_memory_agent.py  test_tools.py
(+109 files in other folders)
