[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.27",
    "terno-agent[openai]",
    "uvicorn[standard]>=0.47.0",
    "websockets>=13.0",
]

[tool.uv.sources]
terno-agent = { path = "../sdk", editable = true }
