[project]
name = "terno-agent"
version = "0.2.0"
description = "Multi-agent CLI that answers questions about your database and runs code in a sandbox."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sandeep Akode" }]
keywords = ["ai", "agent", "llm", "database", "sql", "sandbox", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.40"]
docker = ["docker>=7.0"]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
mcp = ["mcp>=1.2", "anyio>=4.4"]
milvus = ["pymilvus>=2.4"]
benchmarks = [
    "anthropic>=0.39",
    "datasets>=2.19",
    "docker>=7.0",
    "harbor>=0.1.32; python_version >= '3.12'",
    "openai>=1.40",
    "swebench",
    "terminal-bench; python_version >= '3.12'",
]
all = [
    "anthropic>=0.39",
    "openai>=1.40",
    "docker>=7.0",
    "psycopg[binary]>=3.1",
    "pymysql>=1.1",
    "mcp>=1.2",
    "anyio>=4.4",
    "pymilvus>=2.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
terno = "terno_agent.cli:main"
terno-agent = "terno_agent.cli:main"

# Third-party sandbox backends register here. Each entry's name becomes the
# value users pass via TERNO_SANDBOX / --sandbox; the value points at a
# callable returning an object that satisfies `terno_agent.sandbox.Sandbox`.
# Example (in a plugin package's own pyproject.toml):
#   [project.entry-points."terno_agent.sandboxes"]
#   qemu = "terno_qemu:QemuSandbox"
[project.entry-points."terno_agent.sandboxes"]

[project.urls]
Homepage = "https://github.com/terno-ai/terno-agent"
Issues = "https://github.com/terno-ai/terno-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terno_agent", "src/terno"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
